styles.css
.coursearchiver_myformerror {
    background-color: #fdf5e6;
    border: 2px solid #800000;
    font-size: 1.1em;
    font-weight: bold;
    margin: 20px;
    padding: 20px;
}

.coursearchiver_myformconfirm {
    background-color: #f0f8ff;
    border: 2px solid #cacadc;
    font-size: 1.1em;
    font-weight: bold;
    margin: 20px;
    padding: 20px;
    text-align: center;
}

.coursearchiver_stats {
    background-color: #c0c0c0;
    border: 1px dotted #808080;
    color: #fff;
    font-size: .85em;
    padding: 5px;
}

.coursearchiver_error_text {
    background-color: whitesmoke;
    color: #800000;
    margin: 5px;
    padding: 5px;
}

.coursearchiver_notice_text {
    background-color: yellow;
    color: black;
    margin: 5px;
    padding: 5px;
}

.coursearchiver_completedmsg {
    background-color: whitesmoke;
    font-size: 1.5em;
    font-weight: bold;
    padding: 20px;
    text-align: center;
}

.coursearchiver_alreadyhidden {
    opacity: .5;
}

.coursearchiver_progress_bar_spacing {
    margin-bottom: 120px;
}

.coursearchiver_progress_bar {
    border: 2px solid black;
    box-sizing: border-box;
    margin-top: -104px;
    position: relative;
    text-align: center;
    width: 100%;
}

.coursearchiver_bar {
    background-color: red;
    font-size: 3em;
    line-height: 100px;
    height: 100px;
}

.mform .coursearchiver_checkbox .fitem {
    margin: 0;
    padding: 4px;
}

.path-admin-tool-coursearchiver .fdate_selector .form-group {
    display: inline-block;
}

.path-admin-tool-coursearchiver div.felement {
    display: flex;
}

.path-admin-tool-coursearchiver .femptylabel > div:first-child {
    flex: 0;
    padding-left: 0;
}

.path-admin-tool-coursearchiver .femptylabel .form-group {
    margin: .5rem;
}

.path-admin-tool-coursearchiver .btn-primary {
    margin: auto;
}

.path-admin-tool-coursearchiver .form-check-input:not(#id_emptyonly) {
    position: unset;
    vertical-align: middle;
}

